apps/nextcloud/ingressroute-nextcloud.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nextcloud
  namespace: nextcloud
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`cloud.cherkaoui.ch`) && PathPrefix(`/`)
      kind: Rule
      middlewares:
        - name: security-headers
          namespace: traefik
      services:
        - name: nextcloud
          port: http
  tls:
    certResolver: letsencrypt
